--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"format": "prettier --write .",
-		"lint": "eslint --fix . --ext .js,.jsx,.ts,.tsx"
+		"lint": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -45,6 +47,8 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-n": "^15.6.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-react": "^7.31.11"
-	}
+		"eslint-plugin-react": "^7.31.11",
+		"gh-pages": "^4.0.0"
+	},
+	"homepage": "https://luissaavaz.github.io/save-christmas/"
 }
